Cambios en la manecilla de los segundos, y se agrega el icono de la bateria

--- a/appinfo.json
+++ b/appinfo.json
@@ -19,6 +19,17 @@
       "type": "png",
       "name": "IMAGE_BACKGROUND",
       "file": "images/background.png"
-    }]
+    },
+    {
+      "file": "images/battery_icon.png",
+      "name": "BATTERY_ICON",
+      "type": "png"
+    },
+    {
+      "file": "images/battery-charge.png",
+      "name": "BATTERY_CHARGE",
+      "type": "png"
+    }  
+    ]
   }
 }
