Se agregó mas info en la caratula, temp, humedad, velocidad del viento, sunset y sunrise

--- a/appinfo.json
+++ b/appinfo.json
@@ -13,7 +13,12 @@
   "appKeys": {
     "dummy": 0,
     "KEY_TEMPERATURE": 0,
-    "KEY_CONDITIONS": 1
+    "KEY_CONDITIONS": 1,
+    "KEY_HUMIDITY": 2,
+    "KEY_WIND": 3,
+    "KEY_SUNRISE": 4,
+    "KEY_SUNSET": 5
+
   },
   "capabilities": 
   [ "location" ],
