Correcciones en el config

--- a/appinfo.json
+++ b/appinfo.json
@@ -28,7 +28,8 @@
     "HAND_LENGTH_SEC": 13,
     "HAND_LENGTH_SEC_INVERSE": 14,
     "HAND_LENGTH_MIN": 15,
-    "HAND_LENGTH_HOUR": 16
+    "HAND_LENGTH_HOUR": 16,
+    "HAND_TYPE": 17
 
 
   },
