--- a/appinfo.json
+++ b/appinfo.json
@@ -102,7 +102,14 @@
         "type": "png",
         "name": "BACKGRONUD_MODERN",
         "file": "images/modern_background_new.png"
-    }   
+    } 
+    ,
+    {
+        "type": "png",
+        "name": "ITEM_SUNRISE",
+        "file": "images/sunrise.png  "
+    }
+
     
     ]
   }
