--- a/appinfo.json
+++ b/appinfo.json
@@ -107,7 +107,12 @@
     {
         "type": "png",
         "name": "ITEM_SUNRISE",
-        "file": "images/sunrise.png  "
+        "file": "images/sunrise.png"
+    },
+    {
+        "type": "png",
+        "name": "ITEM_SUNSET",
+        "file": "images/sunset.png"
     },
     {
         "type":"font",
