--- a/appinfo.json
+++ b/appinfo.json
@@ -29,7 +29,14 @@
     "HAND_LENGTH_SEC_INVERSE": 14,
     "HAND_LENGTH_MIN": 15,
     "HAND_LENGTH_HOUR": 16,
-    "HAND_TYPE": 17
+    "HAND_TYPE": 17,
+    "TEMPERATURE": 18,
+    "CONDITIONS": 19,
+    "HUMIDITY": 20,
+    "WIND": 21,
+    "SUNSET": 22,
+    "SUNRISE": 23,
+    "DIGITALTIME": 24
 
 
   },
