--- a/appinfo.json
+++ b/appinfo.json
@@ -97,6 +97,28 @@
         "name":"FONT_TIME_24",
         "file":"fonts/btseps2.ttf"
       }      
+      ,
+       {
+        "type":"font",
+        "name":"FONT_CHICAGO_12",
+        "file":"fonts/chicago.ttf"
+      } 
+      ,
+       {
+        "type":"font",
+        "name":"FONT_CHICAGO_14",
+        "file":"fonts/chicago.ttf"
+      },
+       {
+        "type":"font",
+        "name":"FONT_CHICAGO_16",
+        "file":"fonts/chicago.ttf"
+      } ,
+       {
+        "type":"font",
+        "name":"FONT_CHICAGO_18",
+        "file":"fonts/chicago.ttf"
+      } 
     ]
   }
 }
