Added weather font

--- a/appinfo.json
+++ b/appinfo.json
@@ -80,6 +80,11 @@
         "type":"font",
         "name":"FONT_VISITOR_14",
         "file":"fonts/visitor2.ttf"
+      }  ,
+       {
+        "type":"font",
+        "name":"FONT_WEATHER_12",
+        "file":"fonts/weathericons.ttf"
       } 
     ]
   }
